# imgui_slim

./: CMakeLists.txt
backends/: imgui_impl_wgpu.cpp
